@@ -15,6 +15,9 @@ New config options:
 - partySkill: target_dead
   Only use the skill on a dead player. Useful for Resurrection.
 
+Internal:
+- whenGroundStatus() now takes coordinates instead of a player/monster.
+
 Credits:
 - Damokles: case sensitivity fix.
 
